--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>English Excellence</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link href="dist/hamburgers.css" rel="stylesheet" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <load src="./partials/header.html" />
 
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <load src="./partials/hero.html" />
+      <load src="./partials/about.html" />
+      <load src="./partials/lessons.html" />
+      <load src="./partials/proposal.html" />
+      <load src="./partials/teachers.html" />
+      <load src="./partials/application-form.html" />
+      <load src="./partials/feedback.html" />
     </main>
 
     <load src="./partials/footer.html" />
