--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       <load src="./partials/proposal.html" />
       <load src="./partials/teachers.html" />
       <load src="./partials/application-form.html" />
-      <load src="./partials/feedback.html" />
+      <load src="./partials/reviews.html" />
     </main>
 
     <load src="./partials/footer.html" />
