--- a/src/index.html
+++ b/src/index.html
@@ -22,16 +22,16 @@
     <load src="./partials/header.html" />
 
     <main>
-      <load src="./partials/hero.html" />
+      <!-- <load src="./partials/hero.html" />
       <load src="./partials/about.html" />
-      <load src="./partials/lessons.html" />
+      <load src="./partials/lessons.html" /> -->
       <load src="./partials/proposal.html" />
-      <load src="./partials/teachers.html" />
+      <!-- <load src="./partials/teachers.html" />
       <load src="./partials/application-form.html" />
-      <load src="./partials/reviews.html" />
+      <load src="./partials/reviews.html" /> -->
     </main>
 
-    <load src="./partials/footer.html" />
+    <!-- <load src="./partials/footer.html" /> -->
 
     <script type="module" src="./main.js"></script>
   </body>
