--- a/src/index.html
+++ b/src/index.html
@@ -36,5 +36,6 @@
 
     <script type="module" src="./main.js"></script>
     <script type="module" src="./acnhor-button.js"></script>
+    <script type="module" src="./animation.js"></script>
   </body>
 </html>
