add slider to reviews section

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -34,8 +38,11 @@
 
     <load src="./partials/anchor-button.html" />
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
     <script type="module" src="./main.js"></script>
     <script type="module" src="./acnhor-button.js"></script>
     <script type="module" src="./animation.js"></script>
+    <script type="module" src="./slider.js"></script>
   </body>
 </html>
