--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 
     <script type="module" src="./main.js"></script>
     <script type="module" src="./acnhor-button.js"></script>
-    <script type="module" src="./animation.js"></script>
-    <script type="module" src="./slider.js"></script>
+    <script type="module" src="./animation.js" defer></script>
+    <script type="module" src="./slider.js" defer></script>
   </body>
 </html>
