--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
     <script type="module" src="./main.js"></script>
     <script type="module" src="./acnhor-button.js"></script>
     <script type="module" src="./animation.js"></script>
-    <script type="module" src="./slider.js"></script>
+    <script type="module" src="./counter-animation.js"></script>
+    <script type="module" src="./slider.js" defer></script>
   </body>
 </html>
